--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^5.7.0",
     "morgan": "^1.9.1",
     "mssql": "^4.3.0",
+    "node-sspi": "^0.2.5",
     "sequelize": "^4.41.2",
     "winston": "^3.1.0",
     "winston-daily-rotate-file": "^3.5.1"
